fixed broken image issue

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="main-container__hero">
           <img
             class="main-container__hero-image"
-            src="/images/illustration-hero.svg"
+            src="./images/illustration-hero.svg"
             alt="Guy listening to music"
           />
         </div>
@@ -52,7 +52,7 @@
           </div>
           <div class="main-container__info">
             <div class="info-image">
-              <img src="/images/icon-music.svg" alt="Music icon" />
+              <img src="./images/icon-music.svg" alt="Music icon" />
             </div>
             <div class="info-content">
               <p class="info-plan">Annual Plan</p>
