fixed html validation issue

--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@
         </div>
       </section>
       <section class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://www.frontendmentor.io/profile/shravankumartalabhaktula">Shravan Kumar Talabhaktula</a>.
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a
+            href="https://www.frontendmentor.io/profile/shravankumartalabhaktula"
+            >Shravan Kumar Talabhaktula</a
+          >.
+        </p>
       </section>
     </main>
   </body>
